GH-6 fix(what-do-you-seek): image being stretch in safari

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -801,6 +801,8 @@
 
       flex-wrap: wrap;
 
+      align-items: flex-start;
+
       justify-content: center;
 
       visibility: visible;
